--- a/static/main.css
+++ b/static/main.css
@@ -1,83 +1,90 @@
-html {
-    scroll-behavior: smooth;
-}
-.nav-color {
-    background-color: #216b39;
-}
-a.nav-link {
-    opacity: 0.75 !important;
-    color: white !important;
-}
-a.nav-link:hover {
-    opacity: 1 !important;
-}
-.custom-bg-color {
-    background-color: white;
-}
-.custom-bg-color-2 {
-    background-color: #464646;
-}
-.custom-bg-color-3 {
-    background-color: #216b39;
-}
-
-.custom-bg-color-4 {
-    background-color: #8bb094;
-}
-.custom-bg-color-5 {
-    background-color: white;
-}
-body {
-    background-color: #f0fdf4; /* Light green like index */
-    color: #216b39; /* Tailwind gray-800 or default text */
-  }  
-.custom-font {
-    font-family: 'Signika', sans-serif;
-}
-.card-custom-preview {
-    max-width: 250px;
-    width: 25rem;
-}
-.card-custom {
-    width: 25rem;
-}
-.crops-list-tab {
-    color: white;
-    text-align: center;
-}
-main > .container {
-    padding-top: 64px !important;
-}
-
-.nav-tabs .nav-link.active {
-    background-color: #8bb094; /*545454*/
-    border-color: #216b39; /*333333*/
-    color: #fff;
-}
-.nav-link:hover {
-    color: #fff !important;
-    background-color: #545454;
-    border-radius: var(--bs-border-radius) !important;
-}
-
-.nav-tabs {
-    --bs-nav-tabs-link-hover-border-color: #333333;
-}
-
-.brown-text {
-	color: #4e260d; 
-}
 html, body {
     height: 100%;
     margin: 0;
+    scroll-behavior: smooth;
   }
   
   body {
+    background-color: #f0fdf4; /* Light green like index */
+    color: #216b39; /* Tailwind gray-800 or default text */
     display: flex;
     flex-direction: column;
+    font-family: 'Signika', sans-serif;
   }
   
   footer {
     margin-top: auto;
+  }
+  
+  /* Navigation */
+  .nav-color {
+    background-color: #216b39;
+  }
+  
+  a.nav-link {
+    opacity: 0.75 !important;
+    color: white !important;
+  }
+  
+  a.nav-link:hover {
+    opacity: 1 !important;
+  }
+  
+  /* Custom background colors */
+  .custom-bg-color {
+    background-color: white;
+  }
+  .custom-bg-color-2 {
+    background-color: #464646;
+  }
+  .custom-bg-color-3 {
+    background-color: #216b39;
+  }
+  .custom-bg-color-4 {
+    background-color: #8bb094;
+  }
+  .custom-bg-color-5 {
+    background-color: white;
+  }
+  
+  /* Custom cards */
+  .card-custom-preview {
+    max-width: 250px;
+    width: 25rem;
+  }
+  .card-custom {
+    width: 25rem;
+  }
+  
+  /* Crops List Tabs */
+  .crops-list-tab {
+    color: white;
+    text-align: center;
+  }
+  
+  main > .container {
+    padding-top: 64px !important;
+  }
+  
+  /* Nav Tabs */
+  .nav-tabs .nav-link.active {
+    background-color: #8bb094;
+    border-color: #216b39;
+    color: #fff;
+  }
+  
+  .nav-link:hover {
+    color: #fff !important;
+    background-color: #545454;
+    border-radius: var(--bs-border-radius) !important;
+  }
+  
+  .nav-tabs {
+    --bs-nav-tabs-link-hover-border-color: #333333;
+  }
+  
+  /* Brown Text */
+  .brown-text {
+    color: #4e260d;
   }
   
